@@ -5,6 +5,7 @@ postgresql-common (125) UNRELEASED; urgency=low
   * Add t/160_alternate_confroot.t: Test creation, operation, upgrading, and
     removal of clusters as user nobody using $PG_CLUSTER_CONF_ROOT. This
     reproduces LP#835630 and other bugs.
+  * PgCommon.pm: If $PG_CLUSTER_CONF_ROOT is set, untaint it.
 
  -- Martin Pitt <mpitt@debian.org>  Sat, 08 Oct 2011 12:16:13 +0200
 
